# HTML_Reader

./: .gitignore  CMakeLists.txt  README.md
doc/: Phase1.md  TechInfo.md
sources/include/: Page.h  Reader.h
sources/include/Page/: Common.h  Head.h  Page.h
sources/src/: Page.cpp  Reader.cpp  main.cpp
sources/src/Page/: Head.cpp  Page.cpp
